sventon change history
-----------------------------------------------------------------------------------------

[763] Fixed: Bug #7106 - View files with different encoding.
[763] Fixed: Bug #9847 - Directories should not be possible to diff.
[729] Added: Feature #2884 - N Latest Commit Infos.
[729] Added: Feature #2748 - Revision details ajaxified.
[724] Added: Feature #2887 - Customizable RSS body.
[720] Added: Feature #2853 - Warn if repository url is not root.

[754] Release 1.1 RC3 (2006-12-19)
[750] Fixed: Bug #9485 - Temp path (creation) error in JBoss.
[739] Fixed: Bug #9518 - IE cache problem - show files in flatten view.
[738] Added: Feature #2854 - Improve initial cache loading.

[717] Release 1.1 RC2 (2006-11-06)
[715] Fixed: Bug #9356 - More than one entry must be selected for zip download.
      Fixed: Bug #9367 - More than one entry must be selected for view thumbnails.
[713] Fixed: Bug #9323 - Parse error in oc4j.
[712] Fixed: Bug #9315 - RSS feed.

[705] Release 1.1 RC1 (2006-10-30)
[699] Added: Upgraded to JavaSVN 1.1.0beta5.
[677] Added: Feature #2751 - Update the caches one by one.
[651] Added: Feature #2670 - Possibility to expand flattened dirs.
[611] Added: Feature #1570 - Support for multiple repositories.
[600] Fixed: Bug #8371 - Misspelled revision parameter in logs view.
      Fixed: Bug #8370 - Revision parameter forgotten in back-link.
[594] Added: Feature #2417 - Search result order by.
[591] Added: Feature #2420 - File extension filtering in repobrowser.
[590] Added: Feature #1868 - Unified diff view.
[563] Added: Feature #2259 - Revision info cache.
[552] Added: Upgraded to JavaSVN 1.1.0beta2.
[546] Fixed: Redesign of entry cache.
      Added: Feature #2175 - Commit message cache using Lucene.
      Added: Upgraded to ehcache 1.2.
      Added: Upgraded to JavaSVN 1.1.0b.

[582] Release 1.0.0 (2006-07-03)
[575] Fixed: Bug #7985 - Tooltip text wrap in browser view.