@@ -180,9 +180,9 @@
       <td align="right" style="white-space: nowrap;">
         <div id="searchHelp" class="helpDiv" style="display: none;"></div>
         <spring:message code="search.text"/>
-        <input type="radio" id="entrySearch" name="searchMode" class="rdo" checked value="entries"/>
+        <input type="radio" id="entrySearch" name="searchMode" class="rdo" value="entries" ${userContext.searchMode eq 'entries' ? 'checked' : ''}/>
         <label for="entrySearch">entries</label>
-        <input type="radio" id="logSearch" name="searchMode" class="rdo" value="logMessages">
+        <input type="radio" id="logSearch" name="searchMode" class="rdo" value="logMessages" ${userContext.searchMode eq 'logMessages' ? 'checked' : ''}>
         <label for="logSearch">logs</label>
         <a href="#" onclick="javascript:showHideHelp($('searchHelp'), 'search_help'); return false;"><img style="vertical-align:bottom;" src="images/icon_help.png" alt="Search help"/></a>
         <input type="text" name="searchString" class="sventonSearchField" value="" ${isUpdating || !isHead ? 'disabled' : ''} />
